--- a/forgot.html
+++ b/forgot.html
@@ -22,13 +22,13 @@
         <div class="row form px-3">
             <form id="forgotForm">
                 <h4 class="text-center text-dark pb-1">Forgot Password</h4>
-                <p class="text-center text-dark pb-2">Please, enter your valid email address to receive a password reset code.</p>
+                <p class="text-center text-dark pb-2">Please, enter your valid email address to receive a link for password reset page.</p>
                 <div class="mb-2">
                     <input type="email" class="form-control" id="emailAddress" placeholder="Email">
                 </div>
                 <div class="mb-1">
                     <a class="nav-link text-center text-dark" href="http://localhost/ASIMS/login.html">Login Page</a>
-                </div>
+                </div>     
                 <div class="row mx-4 mt-3">
                     <button type="button" class="btn btn-dark" id="forgotButton">Send Email</button>
                 </div>
