--- a/forgot.html
+++ b/forgot.html
@@ -40,7 +40,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/sweetalert.js"></script>
-    <script src="function/forgot.js"></script>
+    <script src="function/forgotPass.js"></script>
 </body>
 
 </html>
