--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/sweetalert.js"></script>
-    <script src="function/login.js"></script>
+    <script src="function/empLogin.js"></script>
 </body>
 
 </html>
