--- a/forgot.html
+++ b/forgot.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/img/red.png" type="image/x-icon">
     <title>A&S Motor Parts</title>
 </head>
 
