--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/sweetalert.js"></script>
-    <script src="function/empLogin.js"></script>
+    <script src="function/login.js"></script>
 </body>
 
 </html>
