--- a/login.html
+++ b/login.html
@@ -16,33 +16,32 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <h4 class="text-center text-dark pt-5 mt-5">A&S Inventory Management <br>System</h4>
+                <h4 class="text-center text-dark pt-5 mt-5" style="color:#800000 !important;">A&S Inventory Management <br>System</h4>
                 <img class="text-center mt-2" src="/ASIMS/assets/img/login.jpg" style="width: 100%; height:60vh;">
             </div>
             <div class="col-6 mt-5 pt-5 px-5">
                 <form id="loginForm">
-                    <h4 class="text-center text-dark pb-1 pt-5 mt-4">WELCOME!</h4>
-                    <p class="text-center text-dark pb-2">Please, enter your credentials to access the A&S Motorparts Inventory System</p>
-                    <div class="mb-4 px-5">
-                        <input type="text" class="form-control " id="username" placeholder="Username">
+                    <h2 class="text-center pb-1 pt-5 mt-4" style="color:#800000 !important;">WELCOME!</h2>
+                    <div class="mb-4 px-5 ms-5 mt-4">
+                        <input type="text" class="form-control rounded-pill" style="background-color: #F5F5F5; color: #000000 !important; width: 18rem;" id="username" placeholder="Username">
                     </div>
-                    <div class="mb-4 px-5">
-                        <input type="password" class="form-control" id="password" placeholder="Password">
+                    <div class="mb-4 px-5 ms-5">
+                        <input type="password" class="form-control rounded-pill" style="background-color: #F5F5F5; color: #000000 !important; width: 18rem;" id="password" placeholder="Password">
                     </div>
-                    <div class="mb-4 px-5">
+                    <div class="mb-4 px-5 ms-5">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" onclick="seePassword()"
+                            <input class="form-check-input" type="checkbox"  onclick="seePassword()"
                                 id="flexCheckIndeterminate">
                             <label class="form-check-label text-dark" for="flexCheckIndeterminate">Show Password</label>
                         </div>
                     </div>
-                    <div class="row mx-5 mt-3">
-                        <button type="button" class="btn text-white fw-bold" style="background-color: #B2355E;" id="loginButton">LOGIN</button>
+                    <div class="row mt-4 ms-5">
+                        <button type="button" class="btn text-white fw-bold rounded-pill ms-5" style="background-color: #800000; width: 18rem;" id="loginButton">LOGIN</button>
                     </div>
                     <div class="mb-4 mt-4">
                         <a class="nav-link text-center text-dark fw-bold" href="http://localhost/ASIMS/forgot.html">Forgot Password?</a>
                     </div>
-                    <div class="mb-1 mt-3 pt-5">
+                    <div class="mt-5 pt-5">
                         <p class="nav-link text-center text-dark fw-bold">v1.0</p>
                     </div>
                 </form>
