--- a/forgot.html
+++ b/forgot.html
@@ -41,7 +41,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/sweetalert.js"></script>
-    <script src="function/forgotPassword.js"></script>
+    <script src="function/forgotPasswords.js"></script>
 </body>
 
 </html>
