--- a/login.html
+++ b/login.html
@@ -51,47 +51,11 @@
 
 
     
-<!-- <div class="bg-color pt-5">
-<div class="motor-vector-container pt-3"> 
-    
-    <img src="assets/img/red.png">
-    <img src="assets/img/green.png">
-
-        <div class="row form px-3">
-            <form id="loginForm">
-                <h4 class="text-center text-dark pb-1">Login</h4>
-                <p class="text-center text-dark pb-2">Please, enter your credentials to access the A&S Motorparts Inventory</p>
-                <div class="mb-3">
-                    <input type="text" class="form-control" id="username" placeholder="Username">
-                </div>
-                <div class="mb-3">
-                    <input type="password" class="form-control" id="password" placeholder="Password">
-                </div>
-                <div class="mb-3">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" onclick="seePassword()"
-                            id="flexCheckIndeterminate">
-                        <label class="form-check-label text-dark" for="flexCheckIndeterminate">Show Password</label>
-                    </div>
-                </div>
-                <div class="mb-1">
-                    <a class="nav-link text-center text-dark" href="http://localhost/ASIMS/forgot.html">Forgot Password?</a>
-                </div>
-                <div class="row mx-4 mt-3">
-                    <button type="button" class="btn btn-dark" id="loginButton">Log In</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div> -->
-
-
-
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/sweetalert.js"></script>
-    <script src="function/login.js"></script>
+    <script src="function/empLogin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
